[FIX] web: calendar, adjust contrast of hovered fc-day-number
task-3754159
Part of task-3575827

closes odoo/odoo#168980

X-original-commit: a4a80cb1afdd27c9e59295818916fe064ee2413c

--- a/addons/web/static/src/views/calendar/calendar_renderer.scss
+++ b/addons/web/static/src/views/calendar/calendar_renderer.scss
@@ -504,8 +504,10 @@
                     }
                     .fc-daygrid-day-top {
                         &:hover > .fc-daygrid-day-number {
-                            --o-cw-color: #{$o-white};
-                            --o-cw-bg: #{mix($o-white, $o-action, 50%)};
+                            $-bg: mix($o-view-background-color, $o-action, 75%);
+
+                            --o-cw-color: #{color-contrast($-bg)};
+                            --o-cw-bg: #{$-bg};
 
                             &:before {
                                 display: block;
